Fix aligment & gap

--- a/src/components/Styles/Main.css
+++ b/src/components/Styles/Main.css
@@ -107,5 +107,7 @@ body {
     flex-direction: column;
     display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 0;
   }
 }
